--- a/samples/apps/bookinfo/route-rule-all-v1.yaml
+++ b/samples/apps/bookinfo/route-rule-all-v1.yaml
@@ -1,4 +1,13 @@
 type: route-rule
+name: productpage-default
+spec:
+  destination: productpage.default.svc.cluster.local
+  precedence: 1
+  route:
+  - tags:
+      version: v1
+---
+type: route-rule
 name: reviews-default
 spec:
   destination: reviews.default.svc.cluster.local
@@ -6,5 +15,21 @@ spec:
   route:
   - tags:
       version: v1
-    weight: 100
 ---
+type: route-rule
+name: ratings-default
+spec:
+  destination: ratings.default.svc.cluster.local
+  precedence: 1
+  route:
+  - tags:
+      version: v1
+---
+type: route-rule
+name: details-default
+spec:
+  destination: details.default.svc.cluster.local
+  precedence: 1
+  route:
+  - tags:
+      version: v1
