Support an e2e scenario of mixer with redis server.

--- a/install/kubernetes/templates/BUILD
+++ b/install/kubernetes/templates/BUILD
@@ -8,3 +8,11 @@ filegroup(
     ],
     visibility = ["//visibility:public"],
 )
+
+filegroup(
+    name = "redis_backend",
+    srcs = [
+        "redis.yaml",
+    ],
+    visibility = ["//visibility:public"],
+)
